# AMO2git.py

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml
AMO2Git/: __init__.py  __main__.py  api.py  objects.py
AMO2Git/utils/: CommandsGenerator.py  ExclZipFile.py  H2RequestsSession.py  __init__.py  arg.py
